# PR2-Platform

./: LICENSE  README.md
PR2/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
PR2/docker/: dev.Dockerfile
PR2/docker/script/: build-dev.sh  build-pr2.sh  main-pr2.sh  run-dev.sh  run-pr2.sh
PR2/examples/: launch_task.sh  task_launcher.py
PR2/examples/task_1_solver/: task1_cmd.npz  task_solver.py
PR2/examples/task_2_solver/: task2_cmd.npz  task2_cmd2.npz  task_solver.py
PR2/examples/task_3_solver/: task3_cmd.npz  task_solver.py
PR2/examples/task_4_solver/: task4_cmd.npz  task_solver.py
PR2/examples/task_5_solver/: task5_cmd.npz  task_solver.py
PR2/examples/task_6_solver/: task_solver.py
PR2/pr2/: __init__.py
PR2/pr2/agent/: __init__.py  agent.py
PR2/pr2/env/: __init__.py  env.py
PR2/pr2/objects/: __init__.py  articulated_object.py  object.py
PR2/pr2/robot/: __init__.py  robot.py  robot_cfg.py
PR2/pr2/scene/: __init__.py  scene.py
PR2/pr2/sensor/: __init__.py  sensor.py
PR2/pr2/solver/: __init__.py  task_solver_base.py
PR2/pr2/tasks/: __init__.py  base_task.py  task_five.py  task_four.py  task_one.py  task_six.py  task_three.py  task_two.py
PR2/pr2/tcp/: __init__.py  persistent_tcp_client.py  tcp_client.py  tcp_server.py  utils.py
PR2/pr2/utils/: __init__.py  termination_conditions.py
PR2/submission/: launch_task.sh  task_launcher.py
PR2/submission/task_2_solver/: task_solver.py
